0024723: Not implemented methods in Visual3d and V3d

Removed unused enum V3d_TypeOfProjectionModel and methods V3d_View::SetProjModel(), V3d_View::ProjModel()